<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Updates</string>
    <string name="prop_name" translatable="false">ro.ota.romname</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="help">Help</string>
    <string name="loading">Loading&#8230;</string>
    <string name="filename_separator">-</string>
    <string name="download">Download</string>
    <string name="install">Install</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="rebooting">Rebooting&#8230;</string>
    <string name="information">Information</string>
    <string name="update_available">ROM update available</string>
    <string name="ignore">Ignore</string>
    <string name="donate">Donate</string>
    <string name="finished">Finished</string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="delete_confirm">Are you sure you want to delete this file?</string>
    <string name="available_update_name">Update name and file info here</string>
    <string name="available_progress_counter">0MB / 0MB</string>
    <string name="available_changelog_title">Changelog</string>
    <string name="available_changelog_content">Your Changelog goes here</string>
    <string name="available_md5" translatable="false">MD5:</string>
    <string name="available_check_md5">Check MD5</string>
    <string name="available_ready_to_install">Ready to install</string>
    <string name="available_md5_ok">MD5 Passed</string>
    <string name="available_md5_failed">MD5 Failed</string>
    <string name="available_checking_md5">Checking MD5&#8230;</string>
    <string name="available_downloading">Downloading&#8230;</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="available_delete_confirm_message">Are you sure you want to delete the downloaded file?</string>
    <string name="available_reboot_confirm">Would you like to reboot now?</string>
    <string name="available_url_error">URL Error: Please see your ROM developer</string>
    <string name="available_reboot_manual_title">Please reboot now</string>
    <string name="available_reboot_manual_message">Please reboot to recovery and flash your ROM.\n\nYou can find it in /sdcard/Downloads</string>
    <string name="available_wrong_network_title">Wrong network selected</string>
    <string name="available_wrong_network_message">You are trying to download over your mobile network, and the settings only allow Wi-Fi. Please change the settings accordingly.</string>
    <string name="main_update_available">Update Available!</string>
    <string name="main_update_finished">Download complete</string>
    <string name="main_no_update_available">No Update Available</string>
    <string name="main_update_filename">Filename</string>
    <string name="main_update_progress">Download Progress</string>
    <string name="main_website">Website</string>
    <string name="main_website_summary">Visit ROM website</string>
    <string name="main_donate">Donate</string>
    <string name="main_donate_summary">Donate to the ROM developer</string>
    <string name="main_tap_to_download">Tap to download</string>
    <string name="main_download_completed_details">Tap for details</string>
    <string name="main_tap_to_view_progress">Tap to view progress</string>
    <string name="main_last_checked">Last checked for an update at</string>
    <string name="main_addon">Addons</string>
    <string name="main_addon_summary">Browse and download additional files for this ROM</string>
    <string name="main_rom_information">ROM information</string>
    <string name="main_rom_name">ROM name:</string>
    <string name="main_rom_version">ROM version:</string>
    <string name="main_rom_codename">ROM codename:</string>
    <string name="main_rom_build_date">ROM date:</string>
    <string name="main_android_verison">Android version:</string>
    <string name="main_rom_developer">Developer(s):</string>
    <string name="main_not_compatible_title">Not compatible</string>
    <string name="main_not_compatible_message">This ROM is not compatible with OTA Updates. Please contact your ROM developer. This app requires a custom ROM where the developer has specifically enabled support. Do not rate 1 star because of this. This is not a fault.</string>
    <string name="main_not_connected_title">Not connected</string>
    <string name="main_not_connected_message">You are not connected to any network. Please enable your network or WiFi and try again.</string>
    <string name="main_playstore_title">BitCoin</string>
    <string name="main_playstore_message">You do not have any available apps to handle the \"bitcoin:\" mime-type.\n\nWould you like to search the Google Play Store to find one?</string>
    <string name="main_button_icon">Button icon</string>
    <string name="main_dev_website_icon">Developer Website Icon</string>
    <string name="main_actionbar_button">Actionbar Buttons</string>
    <string name="main_release_ignored">Release ignored</string>
    <string name="preferences_name">Settings</string>
    <string name="download_folder" translatable="false">/storage/emulated/0/Download</string>
    <string name="list_summary" translatable="false">%s</string>
    <string name="twrp_ors_cat" translatable="false">OpenRecoveryScript</string>
    <string name="twrp_ors_title">Enable OpenRecoveryScript</string>
    <string name="twrp_ors_summary">Works for TWRP and some custom CWM (not official) recoveries</string>
    <string name="twrp_ors_information">Enables this app to flash the file via recovery without any interaction needed from the user. Just hit install and wait for it to finish.</string>
    <string name="twrp_ors_delete_after">Delete after install</string>
    <string name="twrp_ors_delete_after_summary">Should the open recovery script remove the update after the install?</string>
    <string name="twrp_ors_install_prefs">Install preferences</string>
    <string name="twrp_ors_install_prefs_summary">Choose some install preferences to use when using the ORS script</string>
    <string name="twrp_ors_wipe_data">Wipe Data</string>
    <string name="twrp_ors_wipe_cache">Wipe Cache</string>
    <string name="twrp_ors_wipe_dalvik">Wipe Dalvik</string>
    <string name="notifications_title">Notifications</string>
    <string name="background_service_summary">Automatically check for updates and show a notification if one is available</string>
    <string name="background_frequency">Update check frequency</string>
    <string name="background_30mins">30 Mins</string>
    <string name="background_60mins">60 Mins</string>
    <string name="background_2hours">2 Hours</string>
    <string name="background_3hours">3 hours</string>
    <string name="background_6hours">6 hours</string>
    <string name="background_12hours">12 hours</string>
    <string name="background_24hours">Daily</string>
    <string name="background_2days">2 days</string>
    <string name="background_3days">3 days</string>
    <string name="background_7days">Weekly</string>
    <string name="theme_title">App Theme</string>
    <string name="mobile_wifi_network">Network</string>
    <string name="mobile_wifi_title">Update over network</string>
    <string name="wifi_network_only">Wi-Fi only</string>
    <string name="mobile_or_wifi">Mobile or Wi-Fi</string>
    <string name="notifications_sound">Sound</string>
    <string name="notifications_vibrate">Vibrate</string>
    <string name="silent_ringtone">Silent</string>



</resources>