<?xml version="1.0" encoding="utf-8"?>
<!--
 	Copyright (C) 2015 Matt Booth (Kryten2k35).
 
 	Licensed under the Attribution-NonCommercial-ShareAlike 4.0 International 
 	(the "License") you may not use this file except in compliance with the License.
 	You may obtain a copy of the License at
 
 		http://creativecommons.org/licenses/by-nc-sa/4.0/legalcode
 
 	Unless required by applicable law or agreed to in writing, software
 	distributed under the License is distributed on an "AS IS" BASIS,
	WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
	See the License for the specific language governing permissions and
	limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    
    <!-- Background update service -->
    <PreferenceCategory
        android:key="updater_ors_screen_title"
        android:title="@string/notifications_title" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="background_service"
        android:summary="@string/background_service_summary"
        android:title="@string/notifications_title" />

    <ListPreference
        android:defaultValue="43200"
        android:dependency="background_service"
        android:entries="@array/updater_background_frequency_entries"
        android:entryValues="@array/updater_background_frequency_values"
        android:key="background_frequency"
        android:summary="@string/list_summary"
        android:title="@string/background_frequency" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="background_service"
        android:key="notifications_sound"
        android:ringtoneType="notification"
        android:title="@string/notifications_sound" />

    <SwitchPreference
        android:defaultValue="true"
        android:dependency="background_service"
        android:key="notifications_vibrate"
        android:title="@string/notifications_vibrate" />


    <!-- App Theme -->
    <PreferenceCategory
        android:key="updater_theme_cat"
        android:title="@string/theme" />

    <ListPreference
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:key="current_theme"
        android:summary="@string/list_summary"
        android:title="@string/theme" />

</PreferenceScreen>