<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                card_view:cardCornerRadius="@dimen/card_view_radius"
                card_view:cardElevation="@dimen/shadow_height"
                card_view:cardUseCompatPadding="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/MainListElement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:clickable="false">

                    <TextView
                        android:id="@+id/tv_main_rom_information"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_rom_information"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        />

                    <TextView
                        android:id="@+id/tv_main_rom_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_rom_name"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                         />

                    <TextView
                        android:id="@+id/tv_main_rom_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_rom_version"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                         />

                    <TextView
                        android:id="@+id/tv_main_rom_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_rom_build_date"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                         />

                    <TextView
                        android:id="@+id/tv_main_android_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_android_verison"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                         />

                    <TextView
                        android:id="@+id/tv_main_rom_developer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_rom_developer"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                         />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/layout_main_update_available"
                card_view:cardCornerRadius="@dimen/card_view_radius"
                card_view:cardElevation="@dimen/shadow_height"
                card_view:cardUseCompatPadding="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/MainListElement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openDownload"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:contentDescription="@string/main_button_icon"
                        android:src="@drawable/ic_action_download" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:id="@+id/main_tv_update_available_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                             />

                        <ProgressBar
                            android:id="@+id/bar_main_progress_bar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:id="@+id/main_tv_update_available_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                             />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/layout_main_no_update_available"
                card_view:cardCornerRadius="@dimen/card_view_radius"
                card_view:cardElevation="@dimen/shadow_height"
                card_view:cardUseCompatPadding="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    style="@style/MainListElement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openCheckForUpdates"
                    android:orientation="horizontal" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:contentDescription="@string/main_button_icon"
                        android:src="@drawable/ic_check" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/main_no_update_available"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            />

                        <TextView
                            android:id="@+id/main_tv_no_update_available_summary"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                             />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/layout_main_dev_donate_link"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/card_view_radius"
                card_view:cardElevation="@dimen/shadow_height"
                card_view:cardUseCompatPadding="true" >

                <LinearLayout
                    style="@style/MainListElement"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="openDonationPage" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/ic_web_site_light" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Сайт производителя"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                             />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Перейти на сайт производителя"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                             />
                    </LinearLayout>
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

</LinearLayout>